--- a/6-atividade/caio-page/package.json
+++ b/6-atividade/caio-page/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "cms",
+  "name": "caio-page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.1.0",
+    "@prismicio/next": "^1.2.1",
+    "@prismicio/react": "^2.6.2",
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
@@ -21,5 +25,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.0",
+    "slice-machine-ui": "^1.2.0"
   }
 }
