--- a/7-atividade/la-padarie-caio-arthur-rafael/package.json
+++ b/7-atividade/la-padarie-caio-arthur-rafael/package.json
@@ -17,7 +17,11 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "styled-components": "^6.0.0-rc.3",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
