--- a/7-atividade/la-padarie-caio-arthur-rafael/package.json
+++ b/7-atividade/la-padarie-caio-arthur-rafael/package.json
@@ -6,14 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-api": "nodemon ./src/api/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
+    "express": "^4.18.2",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +28,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.0"
+    "@types/react-modal": "^3.16.0",
+    "nodemon": "^2.0.22",
+    "prisma": "^4.15.0",
+    "sucrase": "^3.32.0"
   }
 }
