--- a/7-atividade/la-padarie-caio-arthur-rafael/.env
+++ b/7-atividade/la-padarie-caio-arthur-rafael/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://pguser:pgpassword@localhost:5432/db-lapadarie?schema=public"
+DATABASE_URL="file:./dev.db"
