--- a/5-CRUD/package.json
+++ b/5-CRUD/package.json
@@ -16,8 +16,9 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
-    "prisma": "^4.15.0",
+    "prisma": "^4.16.2",
     "sucrase": "^3.32.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   }
