--- a/7-LaPadarie/la-padarie-caio-arthur-rafael/package.json
+++ b/7-LaPadarie/la-padarie-caio-arthur-rafael/package.json
@@ -20,7 +20,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
     "express": "^4.18.2",
-    "next": "13.4.6",
+    "next": "^13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
